--- a/Program_1.ipynb
+++ b/Program_1.ipynb
@@ -68,10 +68,8 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.datasets import fetch_california_housing\n",
     "\n",
-    "cali = fetch_california_housing(as_frame=True)\n",
-    "housing_df = cali.frame\n",
+    "housing_df = pd.read_csv('California housing dataset.csv')\n",
     "\n",
     "numerical_features = housing_df.select_dtypes(include=[np.number]).columns\n",
     "\n",
