--- a/Program_2.ipynb
+++ b/Program_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -30,10 +30,8 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.datasets import fetch_california_housing\n",
     "\n",
-    "cali = fetch_california_housing(as_frame=True)\n",
-    "data = cali.frame\n",
+    "data = pd.read_csv(\"California housing dataset.csv\")\n",
     "\n",
     "numeric_data = data.select_dtypes(include=[float, int])\n",
     "correlation_matrix = numeric_data.corr()\n",
