--- a/Program_4.ipynb
+++ b/Program_4.ipynb
@@ -2,35 +2,30 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "3ConrWQ6RB3C"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "  Experience Qualification   Skill  Age Hired (Target)\n",
+            "0        Yes       Masters  Python   30            Yes\n",
+            "1        Yes     Bachelors  Python   25            Yes\n",
+            "2         No     Bachelors    Java   28             No\n",
+            "3        Yes       Masters    Java   40            Yes\n",
+            "4         No       Masters  Python   35             No\n",
+            "Most Specific Hypothesis: ['Yes' '?' '?' '?']\n"
+          ]
+        }
+      ],
       "source": [
         "import pandas as pd\n",
-        "data = pd.read_csv(\"Dataset.csv\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "hr6gr8l3RjP5"
-      },
-      "outputs": [],
-      "source": [
-        "print(data)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "v-pERkOURmIT"
-      },
-      "outputs": [],
-      "source": [
+        "data = pd.read_csv(\"Dataset.csv\")\n",
+        "print(data)\n",
+        "\n",
         "def find_s_algorithm(data):\n",
         " \"\"\"Implements the Find-S algorithm to find the most specific hypothesis.\"\"\"\n",
         " attributes = data.iloc[:, :-1].values\n",
