--- a/Program_8.ipynb
+++ b/Program_8.ipynb
@@ -9,9 +9,7 @@
       "outputs": [],
       "source": [
         "import pandas as pd\n",
-        "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.tree import DecisionTreeClassifier, plot_tree\n",
         "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
@@ -48,7 +46,7 @@
       ],
       "source": [
         "!pip install graphviz\n",
-        "!apt-get install graphviz -y # To install graphviz system-wide"
+        "!apt-get install graphviz -y"
       ]
     },
     {
@@ -60,28 +58,6 @@
       "outputs": [],
       "source": [
         "import graphviz"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "xdoy0jLrupeC"
-      },
-      "outputs": [],
-      "source": [
-        "data = pd.read_csv(r'/content/Breast Cancer Dataset.csv')"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "qWon1BoWwGwi"
-      },
-      "outputs": [],
-      "source": [
-        "pd.set_option('display.max_columns', None)"
       ]
     },
     {
@@ -107,42 +83,9 @@
         }
       ],
       "source": [
+        "data = pd.read_csv('Breast Cancer Dataset.csv')\n",
+        "pd.set_option('display.max_columns', None)\n",
         "data.diagnosis.unique()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "7LJ9W9bOwSdX"
-      },
-      "outputs": [],
-      "source": [
-        "df = data.drop(['id'], axis=1)\n",
-        "df['diagnosis'] = df['diagnosis'].map({'M':1, 'B':0}) # Malignant:1, Benign:0"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "tLliudkDwU7T"
-      },
-      "outputs": [],
-      "source": [
-        "X = df.drop('diagnosis', axis=1)  # Drop the 'diagnosis' column (target)\n",
-        "y = df['diagnosis']"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "g5V3i_dbxE_g"
-      },
-      "outputs": [],
-      "source": [
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)"
       ]
     },
     {
@@ -586,14 +529,22 @@
         }
       ],
       "source": [
-        "model = DecisionTreeClassifier(criterion='entropy') #criteria = gini, entropy\n",
+        "df = data.drop(['id'], axis=1)\n",
+        "df['diagnosis'] = df['diagnosis'].map({'M':1, 'B':0})\n",
+        "\n",
+        "X = df.drop('diagnosis', axis=1)\n",
+        "y = df['diagnosis']\n",
+        "\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
+        "\n",
+        "model = DecisionTreeClassifier(criterion='entropy')\n",
         "model.fit(X_train, y_train)\n",
         "model"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "ul_7NT8qxMsY"
       },
@@ -606,7 +557,7 @@
         "  return -sum(probabilities * probabilities.apply(math.log2))\n",
         "\n",
         "def conditional_entropy(data, X, target):\n",
-        "  feature_values = data[X].unique()  # Corrected: use .unique() on the series\n",
+        "  feature_values = data[X].unique()\n",
         "  weighted_entropy = 0\n",
         "  for value in feature_values:\n",
         "    subset = data[data[feature] == value]\n",
@@ -617,9 +568,10 @@
         "  total_entropy = entropy(data[target])\n",
         "  feature_conditional_entropy = conditional_entropy(data, X, target)\n",
         "  return total_entropy - feature_conditional_entropy\n",
-        "  for feature in X:\n",
-        "    ig = information_gain(df,feature,'diagnosis')\n",
-        "    print(f\"Information Gain for {feature}: {ig}\")"
+        "\n",
+        "for feature in X:\n",
+        "  ig = information_gain(df,feature,'diagnosis')\n",
+        "  print(f\"Information Gain for {feature}: {ig}\")"
       ]
     },
     {
@@ -743,7 +695,6 @@
       "source": [
         "accuracy = accuracy_score(y_test, y_pred) * 100\n",
         "classification_rep = classification_report(y_test, y_pred)\n",
-        " # Print the results\n",
         "print(\"Accuracy:\", accuracy)\n",
         "print(\"Classification Report:\\n\", classification_rep)"
       ]
@@ -1013,7 +964,8 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.12.7"
     }
   },
   "nbformat": 4,
