--- a/Program_10.ipynb
+++ b/Program_10.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d0d19027",
    "metadata": {},
    "outputs": [
@@ -29,13 +29,12 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.cluster import KMeans\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.decomposition import PCA\n",
     "\n",
-    "data = pd.read_csv(\"Datasets/Wisconsin Breast Cancer dataset.csv\")\n",
+    "data = pd.read_csv(\"Wisconsin Breast Cancer dataset.csv\")\n",
     "df = data.drop(['id', 'Unnamed: 32'], axis=1)\n",
     "df['diagnosis'] = df['diagnosis'].map({'M':1, 'B':0})\n",
     "X = df.drop(columns=[\"diagnosis\"])\n",
